--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,6 +3,7 @@
 * body{
     box-sizing: border-box;
     background-image: linear-gradient(to bottom, #000000, #120105, #1e0207, #260307, #2e0305, #2e0305, #2e0305, #2e0305, #260307, #1e0207, #120105, #000000);   
+    font-family: "Roboto", sans-serif;
 }
 
 $max-width: 1200px;
@@ -13,6 +14,7 @@ a{
 }
 .container{
     width: 100vw;
+    height: 100vh;
     max-width: $max-width;
     margin: 20px auto;
     color: white;
@@ -27,4 +29,39 @@ a{
     color: #fff !important;
     cursor: pointer;
     font-size: 1.2rem;
+}
+
+
+
+.glass-card{
+    width: 50%;
+    background: rgba(255, 255, 255, 0.16);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(9.7px);
+    -webkit-backdrop-filter: blur(9.7px);
+    text-align: center;
+    padding: 60px;
+
+    input {
+        margin: 10px 0px;
+    }
+
+   
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #fff;
+    opacity: 1; /* Firefox */
+    font-size: 1rem;
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: #fff;
+    font-size: 1rem;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+    color: #fff;
+    font-size: 1rem;
 }
