--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -9,6 +9,11 @@
     .logo-mfc{
         font-size: 2.5rem;
         font-weight: 900;
+
+        a{
+            margin: 0px;
+            padding: 0px;
+        }
     }
 
     .nav-menu{
