--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,6 +19,15 @@ a{
     margin: 20px auto;
     color: white;
 }
+
+.flex{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
     
 .main-button{
     all:unset;
