--- a/src/styles/landingpage.scss
+++ b/src/styles/landingpage.scss
@@ -1,20 +1,48 @@
 @import '/src/styles/global.scss';
 
 .hero-banner{
+
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     width: 100%;
-    height: 500px;
+    height: calc(100vh - 400px);
 
     >* {
         padding: 15px;
     }
 
-    button{
+    h1{
+        font-size: 5rem;
         text-align: center;
-        font-size: 1.2rem;
+        font-weight: 700;
     }
+    h2{
+        font-size: 2.5rem;
+        text-align: center;
+        font-weight: 700;
+        margin-bottom: 10px;
+    }
+   
+    .sub-banner{
+
+        margin-top: 100px;
+    
+        h3{
+            font-size: 1.8rem;
+            text-align: center;
+            font-weight: 700;
+        }
+        p{
+            font-size: 1.2rem;
+            font-weight: 300;
+            text-align: center;
+            margin-top: 20px;
+        }
+    }
+    
+   
+    
 
 }
