--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,14 +1,47 @@
 @import 'reset-css';
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
-* body{
-    box-sizing: border-box;
+
+* , html {
+    font-size: 16px;
+}
+
+body {
+    box-sizing: border-box !important;
     background-image: linear-gradient(to bottom, #000000, #120105, #1e0207, #260307, #2e0305, #2e0305, #2e0305, #2e0305, #260307, #1e0207, #120105, #000000);   
     font-family: "Roboto", sans-serif;
+   
 }
+
 
 $max-width: 1200px;
 
-a{
+$screen-xm: 468px;
+$screen-sm: 768px;
+$screen-md: 1024px;
+$screen-lg: 1200px;
+$screen-xl: 1600px;
+
+
+html{
+
+    @media screen and (min-width:$screen-sm){
+        font-size:12px;
+    }
+
+    @media screen and (min-width:$screen-sm){
+        font-size:14px;
+    }
+
+    @media screen and (min-width:$screen-lg){
+        font-size:16px;
+    }
+
+    @media screen and (min-width:$screen-xl){
+        font-size:16px;
+    }
+
+}
+    a{
     text-decoration: none;
     color: #fff;
 }
