--- a/src/styles/landingpage.scss
+++ b/src/styles/landingpage.scss
@@ -5,11 +5,12 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin-top: 100px;
     width: 100%;
-    height: calc(100vh - 400px);
+    height: 500px;
 
-    >* {
-        padding: 15px;
+    > * {
+        padding-bottom: 10px;
     }
 
     h1{
