--- a/src/styles/mintNft.scss
+++ b/src/styles/mintNft.scss
@@ -1,7 +1,8 @@
+@import url(global.scss);
 .mint-nft{
-
+    text-align: center;
     h1{
-        font-size: 4rem;
+        font-size: 3.8rem;
         font-weight: 700;
         text-align: center;
         padding: 10px;
@@ -10,6 +11,15 @@
         font-size:3rem;
         text-align: center;
         padding: 10px;
+        margin-bottom: 10px;
+    }
+    p{
+       font-size: 1.3rem;
+       font-weight: 300;
+       padding: 10px; 
+    }
+    button{
+        margin-top:10px;
     }
 
 }
