--- a/src/styles/profilePage.scss
+++ b/src/styles/profilePage.scss
@@ -34,12 +34,12 @@
     display: grid;
     grid-template-columns: 70% 30%;
     margin-top: 20px;
-    padding: 20px;
+    padding: 0px 20px;
     gap: 20px;
     .tournaments{
         display: flex;  
         justify-content: center;
-        align-items: center;   
+        align-items: center; 
         width: 100%;
         gap: 20px;
         min-height: 50px;
@@ -93,12 +93,46 @@
                 font-size: 1.3rem;
                 font-weight: 300;
             }
-
             p{
                 text-align: center;
                font-weight: 100; 
             }
         }
     }
-   
+}
+
+
+.extra-info{
+    display: flex;  
+    justify-content:center;
+    width: 100%;
+    gap: 10px;
+    margin-top: 20px;
+    .grid-4-info{
+        width: 70%;
+        display:grid;
+        grid-template-columns: auto auto;
+        min-height: 400px;
+        gap: 20px; 
+        padding: 0px 20px;;
+        div{
+            border-radius: 10px;
+            background: rgba(45, 45, 45, 0.3);
+            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+            backdrop-filter: blur(9.7px);
+            -webkit-backdrop-filter: blur(9.7px);
+        }
+    }
+
+    .overall-stats{
+        display: flex;  
+        justify-content:center;
+        align-items: center;     
+        width: 30%;
+        border-radius: 10px;
+        background: rgba(45, 45, 45, 0.3);
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(9.7px);
+        -webkit-backdrop-filter: blur(9.7px);
+    }
 }
