--- a/src/styles/landingpage.scss
+++ b/src/styles/landingpage.scss
@@ -1,4 +1,3 @@
-
 .hero-banner{
 
     display: flex;
@@ -7,13 +6,14 @@
     flex-direction: column;
     margin-top: 100px;
     width: 100%;
-    height: 500px;
+    height: 800px;
 
     > * {
         padding-bottom: 10px;
     }
 
     h1{
+        font-family: 'VIC-Bold', sans-serif;
         font-size: 5rem;
         text-align: center;
         font-weight: 700;
