displaying past fights'

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -15,6 +15,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border-radius: 5px;
     
     .nav-logo{
         position: absolute;
