--- a/src/styles/profilePage.scss
+++ b/src/styles/profilePage.scss
@@ -33,7 +33,7 @@
     display: grid;
     grid-template-columns: 70% 30%;
     margin-top: 20px;
-    padding: 0px 20px;
+    padding: 0px 15px;
     gap: 20px;
     .tournaments{
         display: flex;  
@@ -42,7 +42,7 @@
         width: 100%;
         gap: 20px;
         min-height: 50px;
-        border-radius: 20px;
+        border-radius: 16px;
         background: rgb(248,0,36);
         background: linear-gradient(90deg, rgba(248,0,36,1) 0%, rgb(239, 62, 46) 100%);
        
@@ -123,7 +123,8 @@
         grid-template-columns: auto auto;
         min-height: 400px;
         gap: 20px; 
-        padding: 0px 20px;;
+        padding-left: 10px;
+        padding-right: 5px;
         .my-fighters{
             background-image: url("https://res.cloudinary.com/metaverse-fc/image/upload/v1647822860/Background%20Images/My_fighters_r0nfug.png");
         }
