--- a/src/styles/fighters.scss
+++ b/src/styles/fighters.scss
@@ -87,7 +87,7 @@
 .show-nft-info{
     display: flex;
     justify-content: space-between;
-    padding: 20px;
+    padding: 1px 20px 20px 20px;
     gap: 10px;
     .glass-card-nft{
         display: flex;
@@ -150,7 +150,7 @@
         width: 100%;
         height: 78px;
         gap: 20px;
-        padding: 10px 5px;
+        padding: 2px 5px;
         justify-content: space-evenly;
         align-items: center;
         h1{
@@ -165,7 +165,7 @@
     }
 
     .fight-lost{
-        background: rgba(255, 255, 255, 0.16);
+        background: rgba(255, 255, 255, 0.1);
         border-radius: 16px;
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
         backdrop-filter: blur(9.7px);
