--- a/src/styles/fight.scss
+++ b/src/styles/fight.scss
@@ -1,82 +1,107 @@
 
-@keyframes fadein {
-from { opacity: 0; }
-to   { opacity: 1; }
-}
+  @-webkit-keyframes opacity {
+    0% {
+      opacity: 0
+    }
+    100% {
+      opacity: 1
+    }
+  }
+  @-moz-keyframes opacity {
+    0% {
+      opacity: 0
+    }
+    100% {
+      opacity: 1
+    }
+  }
+  @keyframes opacity {
+    0% {
+      opacity: 0
+    }
+    100% {
+      opacity: 1
+    }
+  }
 
-@-moz-keyframes fadein {
-from { opacity: 0; }
-to   { opacity: 1; }
-}
-
-
-@-webkit-keyframes fadein {
-from { opacity: 0; }
-to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-
-
-
-.fight-container{
-    width: 100%;
-    height: 100%;
-    justify-content: space-center;
-    align-content: center;
-    padding: 20px;
-
-    .fight-grid{
-        display: grid;
-        align-content: center;
-        justify-content: flex-end;
+  
+  
+  @keyframes color-change {
+    0% { color: rgb(248,0,36) }
+    50% { color: rgb(123, 123, 123) }
+    100% { color: rgb(248,0,36)}
+  }
+  .octagon-cage{
+    font-size: 5rem;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    animation: opacity 2s forwards;
+    transform: translate(-50%, -50%);
+    animation: color-change 5s infinite;
+    font-family: 'VIC-BOLD';
+  }
+  
+    .fight-display{
+        display: flex;
         width: 100%;
         height: 100%;
-        grid-template-columns: 70%;
-        .nft-arts{
-            position: fixed;
-            text-align: center;
-            div{
-                padding: 20px;
-            }
+        flex-direction: column;
+        font-family: 'VIC-Light';
+        img{
+            max-width: 100px;
+            border-radius: 5px;
         }
-     
-    }
 
     .fight-sequence{
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        height: 100vh;
-        font-family: 'VIC-Light';
-        .sequence{
-                background: rgba(255, 255, 255, 0.1);
-                border-radius: 16px;
-                box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-                backdrop-filter: blur(9.7px);
-                -webkit-backdrop-filter: blur(9.7px);
-                padding: 20px;
-                margin: 20px 0px;
-                font-size: 1.3rem;
-                -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
-                -moz-animation: fadein 3s; /* Firefox < 16 */
-                -ms-animation: fadein 3s; /* Internet Explorer */
-                -o-animation: fadein 3s; /* Opera < 12.1 */
-                animation: fadein 2s;
-                h1{
-                    padding: 20px 0px;
-                }
-            }
-
-        .winner{
-            display: flex;  
-            align-items: center; 
-            font-size: 2rem;
-            padding: 20px;
-            margin: 20px 0px;
-            border-radius: 16px;
-            background: rgb(248,0,36);
-            background: linear-gradient(90deg, rgba(248,0,36,1) 0%, rgb(239, 62, 46) 100%);
+        position: relative;
+        padding: 5px 50px;
+        div{
+            float: left;
+        }
+        -webkit-animation: opacity 5s forwards;
+        -moz-animation: opacity 5s forwards;
+        animation: opacity 5s forwards;
+       
+    }
+    .fight-sequence-2{
+        position: relative;
+        padding: 5px 50px;
+        -webkit-animation: opacity 5s forwards;
+        -moz-animation: opacity 5s forwards;
+        animation: opacity 5s forwards;
+       
+        div{
+            float: right;
         }
     }
+    
+    .sequence{
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 16px;
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(9.7px);
+        -webkit-backdrop-filter: blur(9.7px);
+        padding: 20px;
+        margin: 20px 0px;
+        font-size: 1.5rem;
+       
+        h1{
+            padding: 20px 0px;
+        }
+    }
+
+}
+
+     
+.winner{
+    display: flex;  
+    align-items: center; 
+    font-size: 2rem;
+    padding: 20px;
+    margin: 20px 0px;
+    border-radius: 16px;
+    background: rgb(248,0,36);
+    background: linear-gradient(90deg, rgba(248,0,36,1) 0%, rgb(239, 62, 46) 100%);
 }
