--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -9,6 +9,10 @@
         font-size: 2.5rem;
         font-weight: 900;
 
+        img {
+            max-width: 150px;
+        }
+
         a{
             margin: 0px;
             padding: 0px;
