--- a/src/styles/landingpage.scss
+++ b/src/styles/landingpage.scss
@@ -1,3 +1,8 @@
+.banner-background {
+    background-image: url('https://res.cloudinary.com/metaverse-fc/image/upload/v1647822897/Background%20Images/Octagon_Background_drsy9i.png');
+    background-size: cover;
+}
+
 .hero-banner{
 
     display: flex;
@@ -6,7 +11,7 @@
     flex-direction: column;
     margin-top: 100px;
     width: 100%;
-    height: 800px;
+    height: 80vh;
 
     > * {
         padding-bottom: 10px;
@@ -17,8 +22,10 @@
         font-size: 5rem;
         text-align: center;
         font-weight: 700;
+        margin-bottom: 30px;
     }
     h2{
+        font-family: 'VIC-Bold', sans-serif;
         font-size: 2.5rem;
         text-align: center;
         font-weight: 700;
