--- a/src/styles/fight.scss
+++ b/src/styles/fight.scss
@@ -27,18 +27,20 @@
   
   
   @keyframes color-change {
-    0% { color: rgb(248,0,36) }
+    0% { color: rgba(248,0,36,1) }
     50% { color: rgb(123, 123, 123) }
     100% { color: rgb(248,0,36)}
   }
+
+
   .octagon-cage{
     font-size: 5rem;
     text-align: center;
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     animation: opacity 2s forwards;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -45%);
     animation: color-change 5s infinite;
     font-family: 'VIC-BOLD';
   }
@@ -48,7 +50,6 @@
         width: 100%;
         height: 100%;
         flex-direction: column;
-        font-family: 'VIC-Light';
         margin-top: 50px;
         .results{
           text-align: center;
@@ -99,6 +100,31 @@
         }
     }
 
+  
+}
+     
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
-     
+
+.winner{
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(9.7px);
+  -webkit-backdrop-filter: blur(9.7px);
+  width:90%;
+  margin: 25px auto;
+  padding: 20px;
+  font-size: 5rem;
+  text-align: center;
+}  
