--- a/src/styles/landingpage.scss
+++ b/src/styles/landingpage.scss
@@ -1,23 +1,15 @@
-.banner-background {
-    background-image: url('https://res.cloudinary.com/metaverse-fc/image/upload/v1647822897/Background%20Images/Octagon_Background_drsy9i.png');
-    background-size: cover;
-}
+.landingPage{
+    width: 100vw;
+    height: 100vh;
+    max-height: 100vh;
+    margin: 0px auto;
+    color: white;
+    background-color: black;
+    margin-top: -100px;
 
-.hero-banner{
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin-top: 100px;
-    width: 100%;
-    height: 80vh;
-
-    > * {
-        padding-bottom: 10px;
-    }
 
     h1{
+        max-width: 60%;
         font-family: 'VIC-Bold', sans-serif;
         font-size: 5rem;
         text-align: center;
@@ -25,31 +17,159 @@
         margin-bottom: 30px;
     }
     h2{
+        max-width: 60%;
         font-family: 'VIC-Bold', sans-serif;
         font-size: 2.5rem;
         text-align: center;
         font-weight: 700;
         margin-bottom: 10px;
     }
-   
+    h3{
+        max-width: 60%;
+        font-family: 'VIC-Bold', sans-serif;
+        font-size: 2.5rem;
+        text-align: center;
+        font-weight: 700;
+        margin-bottom: 10px;
+    }
+    h4{
+        max-width: 100%;
+        font-family: 'VIC-Regular', sans-serif;
+        font-size: 2rem;
+        font-weight: 700;
+        margin-bottom: 10px;
+    }
+    p{
+        max-width: 60%;
+        font-size: 1.8rem;
+        font-weight: 300;
+        text-align: center;
+        margin-top: 20px;
+        margin-right: 15%;
+        margin-left: 15%;
+        font-family: 'VIC-Light', sans-serif;
+    }
+
+    .landing-page-button {
+        margin-bottom: 30px;
+    }
+
+    .mint-button {
+        margin-bottom: 0px;
+        margin-top: 30px;
+    }
+
+    .hero-banner{
+        
+        background-image: linear-gradient(0deg, rgba(0, 0, 0, 1.0), rgba(0, 0, 0, 0.0) 10%), url('https://res.cloudinary.com/metaverse-fc/image/upload/v1647822897/Background%20Images/Octagon_Background_drsy9i.png');
+        background-size: cover;
+        background-repeat:no-repeat;
+        background-position: bottom;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        background-color: black;
+
+    }
+
     .sub-banner{
 
         margin-top: 100px;
-    
-        h3{
-            font-size: 1.8rem;
-            text-align: center;
-            font-weight: 700;
+        margin: 0px auto;
+        width: 100%;
+        height: 60vh;
+        background-color: black;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .howItWorks {
+
+        background-color: #1a1a1a;
+
+        .howItWorksImage {
+
+            max-width: 60%;
+            margin-top: 30px;
+
         }
-        p{
-            font-size: 1.2rem;
-            font-weight: 300;
-            text-align: center;
+
+        .howItWorks1 {
+
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            padding-top: 80px;
+            padding-bottom: 50px;
+
+
+
+        }
+
+        .howItWorks2 {
+
+            background-color: black;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            padding-top: 80px;
+            padding-bottom: 50px;
+        }
+
+        .howItWorks3 {
+
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            padding-top: 80px;
+            padding-bottom: 80px;
+        }
+
+
+    }
+
+    .roadmap {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+        background-color: black;
+
+        padding-top: 80px;
+        padding-bottom: 80px;
+
+        .two-column-roadmap-grid {
             margin-top: 20px;
+            margin-left: 10%;
+            margin-right: 10%;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+
+            p {
+                font-size: 1.4rem;
+                text-align: left;
+                margin: 0;
+                padding-bottom: 30px;
+                max-width: 90%;
+            }
+
+            .roadmap-grid-column {
+                display: grid;
+            }
+
         }
     }
-    
-   
-    
-
 }
