adding flex between:

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -14,7 +14,7 @@
     width: 300px!important;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     border-radius: 5px;
     
