--- a/src/styles/landingpage.scss
+++ b/src/styles/landingpage.scss
@@ -180,4 +180,76 @@
 
         }
     }
+
+    .earlyAccess {
+
+        background-color: #1a1a1a;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+
+        padding-top: 80px;
+        padding-bottom: 80px;
+
+        .subscribeButton {
+
+            margin-top: 30px;
+            margin-bottom: 30px;
+            
+            .subscribeInput {
+                background-color: transparent;
+                border: none;
+                cursor: pointer;
+                border-bottom: 1px solid white;
+                width: 600px;
+                text-align: center;
+                color: white;
+                font-size: 1.8rem;
+                font-weight: 300;
+                text-align: center;
+                font-family: 'VIC-Light', sans-serif;
+            }
+            
+            .subscribeInput:focus {
+                outline: none !important;
+                border-bottom:1px solid white;
+                box-shadow: 0px 8px 8px -5px #ef563d;
+                // box-shadow: round($number: 15px);
+                
+            }
+
+            .subscribeButton {
+                margin-left: -12px;
+                background-color: transparent;
+                border: none;
+                cursor: pointer;
+                border-bottom: 1px solid white;
+                color: #d01634;
+                font-size: 1.8rem;
+                font-weight: 300;
+                text-align: center;
+                font-family: 'VIC-Light', sans-serif;
+            }
+
+            .subscribeButton:hover {
+                color: white
+            }
+
+            .subscribeInput:focus + .subscribeButton {
+                border-bottom:1px solid white;
+                box-shadow: 1px 8px 8px -5px #ef563d;
+            }
+
+
+        }
+
+        .freeNftImage {
+            width: 200px;
+        }
+    }
+
+
 }
