--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -86,9 +86,8 @@ $max-width: 1200px;
 }
 .container{
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 200px);
     max-width: $max-width;
-    max-height: 100vh;
     margin: 20px auto;
     color: white;
 }
@@ -133,6 +132,22 @@ $max-width: 1200px;
     }
 
    
+}
+
+input[type="text"], input[type="password"]{
+    all: unset;
+    display: block;
+    box-sizing: border-box;
+    border: 1px solid rgb(215, 215, 215);
+    background: transparent;
+    outline: none;
+    width: 100%;
+    padding: 12px 10px;
+    border-radius: 50px;
+    font-size: 1rem;
+    margin: 15px auto;
+    color: #fff;
+    font-weight: 300;
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
