--- a/src/styles/loginRegister.scss
+++ b/src/styles/loginRegister.scss
@@ -6,27 +6,10 @@
     justify-content: center;
     align-items: center;
 
-    input[type="text"], input[type="password"]{
-        all: unset;
-        box-sizing: border-box;
-        border: 1px solid rgb(215, 215, 215);
-        background: transparent;
-        outline: none;
-        width: 80%;
-        padding: 12px 10px;
-        border-radius: 50px;
-        font-size: 1rem;
-        margin: 15px 0px;
-        color: #fff;
-        font-weight: 300;
-
-        &:active {
-            text-align: center;
-            color: transparent;
-         }
-        
-        
+    .glass-card{
+        max-width:450px;
     }
+    
     h4{
         font-size: 1rem;
         cursor: pointer;
