--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -112,6 +112,16 @@ $max-width: 1200px;
     font-size: 1.2rem;
 }
 
+.secondary-button{
+    all:unset;
+    background-color: rgba(255, 255, 255, 0.16);
+    border-radius: 20px;
+    padding: 7px 70px;
+    color: #fff !important;
+    cursor: pointer;
+    font-size: 1.2rem;
+}
+
 .main-button:hover {
     background-image: linear-gradient(to right, rgb(208, 22, 22) 0%, #ef563d 100%);;
 }
@@ -134,10 +144,20 @@ $max-width: 1200px;
    
 }
 
+ .overall-stats{
+        display: flex;  
+        justify-content:center;
+        align-items: center;     
+        width: 100%;
+        border-radius: 10px;
+        background: rgba(45, 45, 45, 0.3);
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(9.7px);
+        -webkit-backdrop-filter: blur(9.7px);
+    }
+
 input[type="text"], input[type="password"]{
     all: unset;
-    display: block;
-    box-sizing: border-box;
     border: 1px solid rgb(215, 215, 215);
     background: transparent;
     outline: none;
