--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -106,17 +106,19 @@ $max-width: 1200px;
     background-color: rgb(23, 22, 22);
     border: 2px solid rgb(208, 22, 22);
     border-radius: 20px;
-    padding: 7px 70px;
+    min-width: 100px;
+    padding: 7px 25px;
     color: #fff !important;
     cursor: pointer;
     font-size: 1.2rem;
+    text-align: center;
 }
 
 .secondary-button{
     all:unset;
     background-color: rgba(255, 255, 255, 0.16);
     border-radius: 20px;
-    padding: 7px 70px;
+    padding: 7px  30px;
     color: #fff !important;
     cursor: pointer;
     font-size: 1.2rem;
@@ -149,6 +151,7 @@ $max-width: 1200px;
         justify-content:center;
         align-items: center;     
         width: 100%;
+        height: 100%;
         border-radius: 10px;
         background: rgba(45, 45, 45, 0.3);
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
