--- a/src/styles/fight.scss
+++ b/src/styles/fight.scss
@@ -44,13 +44,32 @@
     animation: color-change 5s infinite;
     font-family: 'VIC-BOLD';
   }
+
+  .fight-container {
+      display: grid;
+      grid-template-columns: 80fr 20fr
+  }
+
+  .fighter-details {
+      padding-left: 15%;
+      padding-right: 15%;
+      text-align: center;
+  }
+
+  .fighter-details-images {
+      max-width: 100%;
+  }
+
+  .versus {
+      padding: 10px 0;
+  }
   
     .fight-display{
         display: flex;
         width: 100%;
         height: 100%;
         flex-direction: column;
-        margin-top: 50px;
+
         .results{
           text-align: center;
           font-size: 4.5rem;
