--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -78,14 +78,14 @@ body {
     height: 100vh;
    
 }
-$max-width: 1200px;
+$max-width: 1400px;
 
     a{
     text-decoration: none;
     color: #fff;
 }
 .container{
-    width: 100vw;
+    width: 100%;
     height: calc(100vh - 200px);
     max-width: $max-width;
     margin: 20px auto;
