made it so hover over fighter worked in fighters section and when clicked they stayed highlighted

--- a/src/styles/fighters.scss
+++ b/src/styles/fighters.scss
@@ -70,8 +70,7 @@
         
         img{
         max-width: 180px;
-        padding: 5px 0px;
-        margin-right: 10px;
+        margin: 5px 10px 5px 0px;
         border-radius: 15px;
         cursor: pointer;
         &:hover{
@@ -80,6 +79,46 @@
         }
 
     }
+
+    .img-content {
+        position: relative;
+        
+        .portfolio-overlay {
+            border-radius: 15px;
+            position: absolute;
+            bottom: 7px;
+            left: 0;
+            height: 100%;
+            width: 95%;
+            background: linear-gradient(0deg, rgba(248,0,36,1), rgba(0, 0, 0, 0.0) 30%);
+            opacity: 0;
+            transition: all .3s ease;
+            z-index: 10;
+      }
+
+        .portfolio-overlay-clicked {
+            border-radius: 15px;
+            position: absolute;
+            bottom: 7px;
+            left: 0;
+            height: 100%;
+            width: 95%;
+            background: linear-gradient(0deg, rgba(248,0,36,1), rgba(0, 0, 0, 0.0) 30%);
+            opacity: 0;
+            transition: all .3s ease;
+            opacity: 0.8;
+        }
+      
+      &:hover {
+
+        .portfolio-overlay {
+            opacity: .8;
+        }
+
+        
+
+      }
+      }
     
 }
 
