--- a/src/styles/fighters.scss
+++ b/src/styles/fighters.scss
@@ -109,15 +109,14 @@
             opacity: 0.8;
         }
       
-      &:hover {
+        cursor: pointer;
+        &:hover {
 
-        .portfolio-overlay {
-            opacity: .8;
+            .portfolio-overlay {
+                opacity: .8;
+            }
+
         }
-
-        
-
-      }
       }
     
 }
