--- a/src/styles/fighters.scss
+++ b/src/styles/fighters.scss
@@ -128,6 +128,7 @@
     justify-content: space-between;
     padding: 1px 20px 20px 20px;
     gap: 10px;
+    width: 95%;
     .glass-card-nft{
         display: flex;
         flex-direction: column;
@@ -181,8 +182,10 @@
     align-items: center;
     gap: 10px;
     padding:0px 20px 50px 20px;
+    width: 95%;
     h1{
         font-size: 2.5rem;
+        margin-bottom: 10px;
     }
     .fight-details{
         display: flex;
