showing winner at the end after all sequence is done

--- a/src/styles/profilePage.scss
+++ b/src/styles/profilePage.scss
@@ -2,6 +2,7 @@
 .profile-page{
     max-height: 100%;
     max-width: 100%;
+    overflow-x: hidden;
     overflow-y: auto;
 
     &::-webkit-scrollbar {
