--- a/src/styles/loginRegister.scss
+++ b/src/styles/loginRegister.scss
@@ -35,5 +35,14 @@
             padding: 10px 0px;
         }
     }
+
+    .cloudinary-button {
+        all:unset;
+        text-decoration: underline;
+        cursor: pointer;
+        font-size: 1rem;
+        font-weight: 300;
+        padding: 10px 0px;
+    }
     
 }
