--- a/src/styles/tournament.scss
+++ b/src/styles/tournament.scss
@@ -3,29 +3,44 @@ span {
     color:white
 }
 
-img {
-  width: 60px;
-}
+
 $side-margin: 50px;
-$vertical-margin: 10px;
+$vertical-margin: 0px;
 
 body{
   background-color: DarkSalmon ;
+  // height: 100vh;
+  overflow-y: hidden;
+
 }
 
 .wrapper{
   display: flex;
-  height: 600px;
+  height: 100vh;
+  width: 100vw;
   justify-content: center;
+  align-items: center;
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+
 }
 
 .item{
   display: flex;
   flex-direction: row-reverse;
-  p{
-    padding: 20px;
-    margin: 0;
-    background-color: red;
+
+
+  img {
+    max-width: 55px;
+  
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
   }
   
   &-parent{
@@ -36,9 +51,9 @@ body{
     &:after{
         position: absolute;
         content: '';
-        width: $side-margin/2;
+        width: calc($side-margin/2 - 11px);
         height: 2px;
-        left: 0;
+        left: -11px;
         top: 50%;
         background-color: #fff;
         transform: translateX(-100%);
@@ -59,7 +74,7 @@ body{
     &:before{
       content: '';
       position: absolute;
-      background-color: #fff;
+      background-color: #fff; // color of the lines
       right: 0;
       top: 50%;
       transform: translateX(100%);
