fixed image upload on accounts page and put the profile pic in the top bar in account

--- a/src/styles/account.scss
+++ b/src/styles/account.scss
@@ -37,4 +37,13 @@
            
         }
     }
+
+    .profileImageContainer {
+        text-align: center;
+    }
+    
+    .split-account {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
 }
