--- a/src/styles/fight.scss
+++ b/src/styles/fight.scss
@@ -88,7 +88,7 @@
       justify-content: space-between;
       position: fixed;
       width: 10%;
-      bottom: 50px;
+      bottom: 25%;
       right: 30px;
       padding: 20px;
       text-align: center;
@@ -166,6 +166,10 @@
     .fighter-image {
         width: 10%;
 
+        .user-image-for-fight {
+            width: 75px;
+            margin-top: 25%;
+        }
     }
     
     .sequence{
@@ -182,25 +186,25 @@
         h1{
             padding: 20px 0px;
         }
-    }  
+    }
+      
+    .winner-result{
+      width: 97%;
+      position: relative;
+      opacity: 0;
+      -webkit-animation: slide-in-bottom 1s, opacity 3s forwards;
+      -moz-animation: slide-in-bottom 1s, opacity 3s forwards;
+      animation: slide-in-bottom 1s, opacity 3s forwards;
+        .winner{
+          background: linear-gradient(90deg, #f80024 0%, #eb4c3e 100%);
+          border-radius: 16px;
+          width:90%;
+          margin: 25px auto;
+          padding: 20px;
+          font-size: 5rem;
+          text-align: center;
+        }
+    }
 }
      
 
-
-.winner-result{
-  width: 97%;
-  position: relative;
-  opacity: 0;
-  -webkit-animation: slide-in-bottom 1s, opacity 3s forwards;
-  -moz-animation: slide-in-bottom 1s, opacity 3s forwards;
-  animation: slide-in-bottom 1s, opacity 3s forwards;
-    .winner{
-      background: linear-gradient(90deg, #f80024 0%, #eb4c3e 100%);
-      border-radius: 16px;
-      width:90%;
-      margin: 25px auto;
-      padding: 20px;
-      font-size: 5rem;
-      text-align: center;
-    }
-}
