--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -158,19 +158,38 @@ $max-width: 1400px;
         backdrop-filter: blur(9.7px);
         -webkit-backdrop-filter: blur(9.7px);
     }
+.glass-card {
 
-input[type="text"], input[type="password"]{
-    all: unset;
-    border: 1px solid rgb(215, 215, 215);
-    background: transparent;
-    outline: none;
-    width: 100%;
-    padding: 12px 10px;
-    border-radius: 50px;
-    font-size: 1rem;
-    margin: 15px auto;
-    color: #fff;
-    font-weight: 300;
+    input[type="text"], input[type="password"]{
+        all: unset;
+        border: 1px solid rgb(215, 215, 215);
+        background: transparent;
+        outline: none;
+        width: 100%;
+        padding: 12px 10px;
+        border-radius: 50px;
+        font-size: 1rem;
+        margin: 15px auto;
+        color: #fff;
+        font-weight: 300;
+    }
+}
+
+.glass-card-update {
+
+    input[type="text"], input[type="password"]{
+        all: unset;
+        border: 1px solid rgb(215, 215, 215);
+        background: transparent;
+        outline: none;
+        width: 100%;
+        padding: 12px 10px;
+        border-radius: 50px;
+        font-size: 1rem;
+        margin: 15px auto;
+        color: #fff;
+        font-weight: 300;
+    }
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
